Fix Button Collapse Transition

--- a/src/components/DashboardLogo/DashboardLogo.scss
+++ b/src/components/DashboardLogo/DashboardLogo.scss
@@ -7,6 +7,7 @@
     justify-content: center;
     .s__title {
         display: flex;
+        align-items: center;
         justify-content: center;
         .t__logo {
             width: 85%;
